--- a/style.css
+++ b/style.css
@@ -27,11 +27,9 @@ body {
   backdrop-filter: blur(5px);
   background-blend-mode: soft-light, screen, overlay, difference, normal;
   padding: 1.5em;
-  border-radius: 0.5em;
   border: none;
   border-radius: 0.3em;
   line-height: 2.5em;
-  /* text-transform: uppercase; */
   padding: 0 1em;
   background-image: linear-gradient(
     160deg,
@@ -42,17 +40,19 @@ body {
   );
   background-size: 100%;
   background-position: center;
+  margin-top: 1.5em;
 }
 
 h1 {
   text-align: center;
   padding-top: 1em;
   color: #fff;
-  text-shadow: #6b8972 0px 0px 5px, #6b8972 1px 1px 5px, #6b8972 2px 2px 5px,
-    #6b8972 3px 3px 5px, #6b8972 4px 4px 5px, #6b8972 5px 5px 5px,
-    #6b8972 6px 6px 5px, #6b8972 7px 7px 5px, #6b8972 8px 8px 5px,
-    #6b8972 9px 9px 5px;
-  margin: 20px 0;
+  text-shadow: rgb(107, 137, 114) 0px 0px 5px, rgb(107, 137, 114) 1px 1px 5px,
+    rgb(107, 137, 114) 2px 2px 5px, rgb(107, 137, 114) 3px 3px 5px,
+    rgb(107, 137, 114) 4px 4px 5px, rgb(107, 137, 114) 5px 5px 5px,
+    rgb(107, 137, 114) 6px 6px 5px, rgb(107, 137, 114) 7px 7px 5px,
+    rgb(107, 137, 114) 8px 8px 5px, rgb(107, 137, 114) 9px 9px 5px;
+  margin: 0 0 1.5em 0;
 }
 
 h1,
@@ -75,15 +75,14 @@ p {
 }
 
 .terminal {
-  /* background-color: rgba(68, 127, 168, 0.5); */
   border-radius: 0.5em;
-  border-left: 4px solid rgba(244, 244, 244, 0.5);
-  padding: 10px;
+  border-left: 0.1em solid rgba(66, 118, 135, 0.5);
+  padding: 0.5em;
   font-family: 'Courier New', Courier, monospace;
   overflow-x: auto;
   white-space: pre-wrap;
   word-wrap: break-word;
-  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.8);
   background-image: linear-gradient(
     160deg,
     rgba(107, 137, 114, 0.5),
@@ -91,7 +90,7 @@ p {
     rgba(244, 244, 244, 0.5),
     rgba(107, 137, 114, 0.5)
   );
-  background-size: 100% 100%;
+  background-size: 100%;
   background-position: center;
   transition: all 0.2s ease-in-out;
 }
