--- a/style.css
+++ b/style.css
@@ -203,10 +203,14 @@ button:focus-visible {
 .button:focus,
 .button:hover {
   background-size: 150% 150%;
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23),
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2), 0 6px 6px rgba(0, 0, 0, 0.23),
     inset 0 -2px 5px 1px var(--color-button-active-inset),
     inset 0 -1px 1px 3px rgba(250, 227, 133, 1);
   color: rgba(120, 50, 5, 0.8);
+}
+
+.text {
+  text-transform: uppercase;
 }
 
 /* Footer */
@@ -217,14 +221,19 @@ button:focus-visible {
 }
 
 /* Responsive */
-/* @media (max-width: 600px) {
-  body {
-    padding: 2px;
-  }
-} */
-
 @media (min-width: 601px) {
   body {
     margin: 0 auto;
+  }
+  .button {
+    display: block;
+  }
+}
+
+@media (max-width: 319px) {
+  .button {
+    display: inline-block;
+    width: 100%;
+    height: max-content;
   }
 }
